--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Tao Zhang's Homepage
+page-top-title: Tao Zhang
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+home-subtitle: Tao Zhang&ensp;|&ensp;张涛
+copyright-text: '&copy; Tao Zhang 2025-2099. All Rights Reserved.'
