--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Tao Zhang's Homepage
 page-top-title: Tao Zhang
-top-section-bg-text: Computer Science
+top-section-bg-text: Control Science & Technology
 home-subtitle: Tao Zhang&ensp;|&ensp;张涛
 copyright-text: '&copy; Tao Zhang 2025-2099. All Rights Reserved.'
